--- a/assets/style.css
+++ b/assets/style.css
@@ -128,8 +128,8 @@ body {
 
 .gallery-item {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 440px;
+    height: 440px;
     object-fit: cover;
     padding: .5em;
 }
