--- a/assets/style.css
+++ b/assets/style.css
@@ -450,4 +450,47 @@ input[type="submit"] {
   text-decoration: none;
   color: #000;
 }
+.top-header {
+    background-color: white;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    display: flex;
+    justify-content: space-between;
+    padding-inline: 100px;
+    padding-block: 30px;
+    align-items: center;
+}
+
+.top-header .name {
+    font-size: 26px;
+}
+
+.nav ul {
+    display: flex;
+    list-style-type: none;
+    font-size: 14px;
+    margin-bottom: 0;
+}
+
+.nav a {
+    text-decoration: none;
+    color: #000;
+}
+
+.carousel-item {
+    height: 100%;
+    overflow: hidden;
+}
+.carousel-item img {
+    aspect-ratio: 1920 / 879;
+    width: 100%;
+    height: auto;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: url('https://fonts.gstatic.com/s/inter/v3/UCvCO3FwrcS8pX-cDB7KCQ.woff2') format('woff2');
+    font-display: swap;
+}
 }
