All good for now

--- a/assets/style.css
+++ b/assets/style.css
@@ -111,7 +111,7 @@ body {
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
     color: #fff;
-    background-color: #BEB45A;
+    background-color: #0000EB;
     border-radius: 0;
 }
 
