--- a/assets/style.css
+++ b/assets/style.css
@@ -18,12 +18,12 @@ body {
     padding-inline: 100px;
     padding-block: 30px;
     align-items: center;
-    height: 80px; /* Set a fixed height */
+    height: 80px; 
 }
 
 .top-header .name {
     font-size: 26px;
-    height: 26px; /* Match height to font-size */
+    height: 26px; 
 }
 
 .nav ul {
@@ -31,7 +31,7 @@ body {
     list-style-type: none;
     font-size: 14px;
     margin-bottom: 0;
-    height: 40px; /* Set a fixed height for the navigation */
+    height: 40px; 
     align-items: center;
 }
 
@@ -111,7 +111,7 @@ body {
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
     color: #fff;
-    background-color: #0000EB;
+    background-color: #BEB45A !important;
     border-radius: 0;
 }
 
@@ -260,19 +260,7 @@ input[type="submit"] {
     background-color: #BEB45A;
     padding: .5em 1em;
 }
-
-@media all and (max-width: 1180px) {
-    .picture {
-        flex: 2;
-    }
-    #about, #contact .container {
-        align-items: center;
-    }
-    .about-me__title {
-        margin-top: 0;
-        margin-bottom: 1em;
-    }
-    #about-me h6, #about-me p {
-        width: 100%;
-    }
+.carousel-control-next-icon {
+    color: #000;
 }
+
