--- a/assets/style.css
+++ b/assets/style.css
@@ -268,10 +268,9 @@ input[type="submit"] {
     width: 3rem;
     height: 3rem;
     opacity: 1;
-    filter: none; /* Enlever tout filtre qui pourrait réduire la visibilité */
+    filter: none; 
     
-    /* Si le fond est clair, utiliser une couleur sombre pour l'icône */
-    background-color: rgba(0, 0, 0, 0.8); /* Fond sombre avec une légère transparence */
+    background-color: rgba(0, 0, 0, 0.8); 
 }
 
 .carousel-control-next-icon {
