--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 body {
     max-width: 1920px;
     margin: auto;
+    color: #000000;
 }
 
 * {
@@ -18,12 +19,14 @@ body {
     padding-inline: 100px;
     padding-block: 30px;
     align-items: center;
-    height: 80px; 
+    height: 80px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
 .top-header .name {
     font-size: 26px;
-    height: 26px; 
+    height: 26px;
+    color: #000000;
 }
 
 .nav ul {
@@ -31,7 +34,7 @@ body {
     list-style-type: none;
     font-size: 14px;
     margin-bottom: 0;
-    height: 40px; 
+    height: 40px;
     align-items: center;
 }
 
@@ -42,7 +45,12 @@ body {
 
 .nav a {
     text-decoration: none;
-    color: #000;
+    color: #000000;
+    font-weight: 500;
+}
+
+.nav a:hover, .nav a:focus {
+    text-decoration: underline;
 }
 
 .social-link img {
@@ -111,13 +119,13 @@ body {
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-    color: #fff;
-    background-color: #BEB45A !important;
+    color: #ffffff;
+    background-color: #9A9547 !important;
     border-radius: 0;
 }
 
 .nav-pills .nav-link {
-    color: #000;
+    color: #000000;
 }
 
 .item-column {
@@ -148,6 +156,9 @@ body {
     align-items: center;
     display: flex;
     font-size: 24px;
+    color: #000000;
+    background-color: #ffffff;
+    border: 1px solid #000000;
 }
 
 .quote {
@@ -242,7 +253,7 @@ form {
 form input {
     width: 100%;
     background-color: transparent;
-    border: solid 1px;
+    border: solid 1px #000000;
     height: 2.5em;
     margin-bottom: 20px;
 }
@@ -250,7 +261,7 @@ form input {
 form textarea {
     width: 100%;
     background-color: transparent;
-    border: solid 1px;
+    border: solid 1px #000000;
     height: 5em;
     line-height: 2.5em;
     font-size: 1.2em;
@@ -258,9 +269,17 @@ form textarea {
 }
 
 input[type="submit"] {
-    background-color: #BEB45A;
+    background-color: #9A9547;
     padding: .5em 1em;
+    color: #ffffff;
+    border: none;
+    cursor: pointer;
 }
+
+input[type="submit"]:hover, input[type="submit"]:focus {
+    background-color: #7A7539;
+}
+
 .carousel-control-next-icon,
 .carousel-control-prev-icon {
     background-size: contain;
@@ -268,20 +287,13 @@ input[type="submit"] {
     width: 3rem;
     height: 3rem;
     opacity: 1;
-    filter: none; 
+    filter: drop-shadow(0 0 2px rgba(0,0,0,0.5));
 }
 
-
 .carousel-control-next-icon {
-    background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2224%22%20height%3D%2224%22%3E%3Cpath%20d%3D%22M7.293%204.707%2014.586%2012l-7.293%207.293%201.414%201.414L17.414%2012%208.707%203.293%207.293%204.707z%22%20fill%3D%22%23ffffff%22/%3E%3C/svg%3E');
+    background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2224%22%20height%3D%2224%22%3E%3Cpath%20d%3D%22M7.293%204.707%2014.586%2012l-7.293%207.293%201.414%201.414L17.414%2012%208.707%203.293%207.293%204.707z%22%20fill%3D%22%23000000%22/%3E%3C/svg%3E');
 }
 
 .carousel-control-prev-icon {
-    background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2224%22%20height%3D%2224%22%3E%3Cpath%20d%3D%22M15.293%203.293%206.586%2012l8.707%208.707%201.414-1.414L9.414%2012l7.293-7.293-1.414-1.414z%22%20fill%3D%22%23ffffff%22/%3E%3C/svg%3E');
+    background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2224%22%20height%3D%2224%22%3E%3Cpath%20d%3D%22M15.293%203.293%206.586%2012l8.707%208.707%201.414-1.414L9.414%2012l7.293-7.293-1.414-1.414z%22%20fill%3D%22%23000000%22/%3E%3C/svg%3E');
 }
-
-
-
-
-
-
