--- a/assets/style.css
+++ b/assets/style.css
@@ -277,7 +277,8 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover, input[type="submit"]:focus {
-    background-color: #7A7539;
+    color: #000000;
+    background-color: #FFD700 !important;
 }
 
 .carousel-control-next-icon,
