--- a/assets/style.css
+++ b/assets/style.css
@@ -269,16 +269,15 @@ form textarea {
 }
 
 input[type="submit"] {
-    background-color: #9A9547;
+    background-color: #FFD700 ;
     padding: .5em 1em;
-    color: #ffffff;
+    color: #000000;
     border: none;
     cursor: pointer;
 }
 
 input[type="submit"]:hover, input[type="submit"]:focus {
-    color: #000000;
-    background-color: #FFD700 !important;
+    background-color: #7A7539;
 }
 
 .carousel-control-next-icon,
